# crossref_db

./: .gitignore  README.md  crossref_db_example.toml  pyproject.toml
src/crossref_db/: __main__.py  config.py  db.py  ftputil.py  model.py
src/crossref_db/importer/: __init__.py  _base.py  ftp.py  local.py
